--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@formspree/react": "^2.4.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/lab": "^5.0.0-alpha.124",
     "@mui/material": "^5.11.14",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -17,8 +18,10 @@
     "react-hover": "^3.0.1",
     "react-moment": "^1.1.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-spring": "^9.7.1",
     "react-typed": "^1.2.0",
+    "slick-carousel": "^1.8.1",
     "use-events": "^1.4.2",
     "web-vitals": "^2.1.4"
   },
