--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-moment": "^1.1.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
     "react-spring": "^9.7.1",
     "react-typed": "^1.2.0",
     "slick-carousel": "^1.8.1",
